--- a/src/components/manati/manajuego.css
+++ b/src/components/manati/manajuego.css
@@ -1,7 +1,7 @@
 .manajuego {
     .custom-manati {
-        max-height: 45vw;
-        height: auto;
+        max-height: 80vh;
+        height: 55vh;
         width: 18vw;
     }
 
